[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menus/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Menus/button_focus_and_selected.tres" type="StyleBox" id=3]
[ext_resource path="res://Menus/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Menus/button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Menus/menubuttonfont.tres" type="DynamicFont" id=6]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
width = 1920
height = 1080

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float amount = 40.0;

void fragment()
{
	vec2 uv = UV*0.05;
	float a = fract(sin(dot(UV, vec2(12.9898, 70.233)*TIME)) * 438.5453) * 1.9;
	vec4 col = texture(TEXTURE, UV); 
	col.a *= pow(a, amount);
	COLOR.a = col.a;
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 10.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 3 )
width = 1920
height = 1080

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BlackBackground" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 884.0
margin_top = 470.0
margin_right = 1036.0
margin_bottom = 610.0

[node name="RetryButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 152.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../QuitButton")
custom_colors/font_color_focus = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color = Color( 0.878431, 0.658824, 0.968627, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.164706, 0.12549, 0.819608, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Retry"

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 152.0
margin_bottom = 140.0
focus_neighbour_bottom = NodePath("../RetryButton")
custom_colors/font_color_focus = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color = Color( 0.878431, 0.658824, 0.968627, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.164706, 0.12549, 0.819608, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
playback_speed = 0.5
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 6 )

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
